Fix menu cut on mobile devices

--- a/css/all.css
+++ b/css/all.css
@@ -768,9 +768,6 @@ margin-bottom: 5px;
 margin-left: unset;
 right: 40px;
 }
-.post {
-overflow: hidden;
-}
 #Overlay .img {
 width: 100% !important;
 margin-left: 0px !important;
