--- a/css/mobile.css
+++ b/css/mobile.css
@@ -106,9 +106,6 @@ border-radius: 5px;
 margin-left: unset;
 right: 40px;
 }
-.post {
-overflow: hidden;
-}
 #Overlay .img {
 width: 100% !important;
 margin-left: 0px !important;
